--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<h1>Hello at 🤘 DesignOps 🤘 </h1>
+<style>
+  body {
+    font-family: sans-serif;
+    padding: 2em 5em;
+  }
+</style>
+
+<h1>Hello at DesignOps </h1>
 
 
 <h2>Read</h2>
@@ -16,12 +23,6 @@
     <li>
       <a href="https://github.com/DesignOps/discussion/issues/1">
         ...the discussion
-      </a>
-    </li>
-
-    <li>
-      <a href="https://github.com/DesignOps/discussion/issues/2">
-        ...the org
       </a>
     </li>
 
