--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul>
   <li><a href="https://medium.com/@kaelig/introducing-design-systems-ops-7f34c4561ba7#.s0l2kwuyn">Introducing Design Systems Ops — Medium</a></li>
   <li>
-  <a href="https://gist.github.com/filtercake/a9c31304e3097d2006ae">Design Ops – Design Systems Ops for the rest of us</a> (draft!)</li>
+    <a href="https://medium.com/@filtercake/design-ops-for-all-of-us-e3dd78c48b42#.mv8rkjlvm">Design Ops — for all of us — Medium</a>
   </ul>
 
 
