change cta to "tell your story" (#10)

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="content">
           <div class="text">
             <p>What is DesignOps?</p>
-            <a class="cta" href="https://github.com/DesignOps/discussion/issues/1">Join the discussion</a>
+            <a class="cta" href="https://github.com/DesignOps/discussion/issues/new?body=What%20helped%20to%20bridge%20the%20gap%20between%20design%20intent%20and%20engineering%20requirements?%20What%20did%20you%20try?%20What%20did%20work%20well,%20what%20didn%27t%20and%20why?%20Tell%20us%20your%20story,%20in%20one%20sentence%20or%205000%20words.%20All%20contributions%20are%20welcome%20:)">Share your story</a>
             <!--
             https://www.flickr.com/photos/dmuth/2917129508/in/photolist-5rM3Ym-rQUFLV-nWAXjG-5rM4HE-5rGHEP-5rM5B1-4aKXAx-d3cioJ-5rGHaR-wd2K5-78Ts-8S8ZfC-p4XpUh-ao4TWX-p2QQ2y-5rZSP7-7PFzQQ-9e8KJw-7PFgFS-c5TMjJ-gmdt-7PBwf2-r1ToSA-5Yohz3-5FP1GM-5rGHVx-4TZJei-5rGJut-7b9Wp9-8KUpro-5j6K1j-8KUp4L-8KRjG4-5Mit7F-7PFtKY-7PBwUV-5ciJYy-9g3JpA-5MnK2y-98WGL8-98ZQfG-98WFZF-98WN9t-98ZQ9C-9h2ttL-fbNwHJ-98WGca-2Fvf7W-8CLegb-9h2t7o
              -->
