refacor: shrink images and use via "CDN" (#13) (#15)
refs #4

--- a/index.html
+++ b/index.html
@@ -28,17 +28,24 @@
 
     }
 
+/*
+![kittens]()
+![lds]()
+![sf]()
+![laser]()
+*/
+
     .introducing-design-systems-ops {
-      background-image: url(https://cdn-images-1.medium.com/max/2000/1*RbwXg-OMlJTG7iiHs4NMQg.jpeg);
+      background-image: url(https://cloud.githubusercontent.com/assets/170145/24078622/a06c68a0-0c72-11e7-8d00-1ec46b4cb259.jpeg);
     }
     .design-ops-for-all-of-us {
-      background-image: url(https://cdn-images-1.medium.com/max/2000/1*lQ7MWNFHBp-fw_ZN4faW-g.jpeg);
+      background-image: url(https://cloud.githubusercontent.com/assets/170145/24078620/a06ac46e-0c72-11e7-8ddb-70a74cb385b3.jpeg);
     }
     .living-design-systems {
-      background-image: url(lds.png);
+      background-image: url(https://cloud.githubusercontent.com/assets/170145/24078621/a06bf870-0c72-11e7-8e62-6996cc5c289c.jpeg);
     }
     .cta-teaser {
-      background-image: url(laser.jpg);
+      background-image: url(https://cloud.githubusercontent.com/assets/170145/24078623/a06f94e4-0c72-11e7-8812-81871c4851d8.jpg);
     }
     .cta-teaser p {
       margin-top: 0;
