--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+
+---
+
 <html>
   <head>
     <meta charset="utf-8" />
@@ -297,6 +301,10 @@
 
       <p class="credits">
         Hosted at <a href="https://github.com/DesignOps/designops.github.io">GitHub</a>. Photos: <a href="https://en.wikipedia.org/wiki/San_Francisco#/media/File:Golden_Gate_Bridge,_SF_(cropped).jpg">Bernard Gagnon, CC BY-SA</a>, <a href="https://www.flickr.com/photos/greencolander/83399376/in/photolist-8nrJh-puYRb6-pG68Sa-6iPxHJ-4TsPGD-aKYLfe-NpGc8-6aaY9h-ftX6kL-ib7vRZ-6QxL9-ghQUci-aPSBPX-ftGKcP-eoiEk2-a4di3w-8krwoN-6r5A9i-dJnbXW-bgR1CT-6QgEp9-5jKjQS-ftGKMr-cnE6B1-4n2SfX-CNmhwX-73AvHb-cnE6vq-4SWsnX-2NaHF3-ftGKsR-34vt5y-Qg4dY-ftGKz4-7GMFTW-8aTk2M-bWrsuq-XZzYD-anG9Yu-4cKiTq-s2if5B-n5YweN-umwPN4-4YcrZQ-2fMQGZ-5pKEFM-ydosEE-5kiV5N-eodHku-y4zxZH" data-href="https://www.flickr.com/photos/greencolander/83399376/in/photolist-8nrJh-puYRb6-pG68Sa-6iPxHJ-4TsPGD-aKYLfe-NpGc8-6aaY9h-ftX6kL-ib7vRZ-6QxL9-ghQUci-aPSBPX-ftGKcP-eoiEk2-a4di3w-8krwoN-6r5A9i-dJnbXW-bgR1CT-6QgEp9-5jKjQS-ftGKMr-cnE6B1-4n2SfX-CNmhwX-73AvHb-cnE6vq-4SWsnX-2NaHF3-ftGKsR-34vt5y-Qg4dY-ftGKz4-7GMFTW-8aTk2M-bWrsuq-XZzYD-anG9Yu-4cKiTq-s2if5B-n5YweN-umwPN4-4YcrZQ-2fMQGZ-5pKEFM-ydosEE-5kiV5N-eodHku-y4zxZH" class="markup--anchor markup--figure-anchor" rel="nofollow">Michelle Tribe, CC BY-SA</a>, <a href="https://www.flickr.com/photos/dmuth/2917129508/in/photolist-5rM3Ym-rQUFLV-nWAXjG-5rM4HE-5rGHEP-5rM5B1-4aKXAx-d3cioJ-5rGHaR-wd2K5-78Ts-8S8ZfC-p4XpUh-ao4TWX-p2QQ2y-5rZSP7-7PFzQQ-9e8KJw-7PFgFS-c5TMjJ-gmdt-7PBwf2-r1ToSA-5Yohz3-5FP1GM-5rGHVx-4TZJei-5rGJut-7b9Wp9-8KUpro-5j6K1j-8KUp4L-8KRjG4-5Mit7F-7PFtKY-7PBwUV-5ciJYy-9g3JpA-5MnK2y-98WGL8-98ZQfG-98WFZF-98WN9t-98ZQ9C-9h2ttL-fbNwHJ-98WGca-2Fvf7W-8CLegb-9h2t7o">Douglas Muth, CC BY-SA</a>
+      </p>
+
+      <p class="credits">
+         Rendered {{ site.time }}.
       </p>
     </div>
 
